[package]
name = "cattleya-js"
version = "0.1.0"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5" }
cattleya = { path = "../rust", features = ["wasm"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
