[package]
name = "cattleya"
version = "0.1.0"
edition = "2021"

[lib]
name = "cattleya"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
once_cell = "1.10"
futures = { version = "0.3", optional = true }
tokio = { version = "1.17", optional = true, features = ["rt"] }

[features]
thread = ["blocking"]
future = []
wasm = []
tokio-rt = ["tokio"]
blocking = ["futures"]
default = ["future"]
